WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262691
uievents/mouse/cancel-mousedown-in-subframe.html WPT is failing
https://bugs.webkit.org/show_bug.cgi?id=262691
Summary
uievents/mouse/cancel-mousedown-in-subframe.html WPT is failing
Abrar Rahman Protyasha
Reported
2023-10-05 04:14:18 PDT
This WPT is failing because preventDefault on mousedown prevents proper handling of mouse events in iframes, as can be seen in this test case:
https://mustaqahmed.github.io/web/interop/cancel-mousedown-in-iframe-top.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-05 04:14:27 PDT
<
rdar://problem/116516596
>
Abrar Rahman Protyasha
Comment 2
2023-10-05 05:18:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18685
EWS
Comment 3
2023-10-12 05:32:28 PDT
Committed
269246@main
(e837c341a756): <
https://commits.webkit.org/269246@main
> Reviewed commits have been landed. Closing PR #18685 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug